--- a/style.css
+++ b/style.css
@@ -1,113 +1,191 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+html {
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
 }
-body{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+#bodye {
+  margin: 0;
   min-height: 100vh;
-  background: #685200;
-}
-.wrapper{
-  width: 605px;
-  background: #ffffffc4;
-  border-radius: 15px;
-  padding: 30px 30px 25px;
-  box-shadow: 0 12px 35px rgba(0,0,0,0.1);
-}
-header, .content :where(i, p, span){
-  color: #202842;
-}
-.wrapper header{
-  font-size: 35px;
-  font-weight: 600;
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23000000' fill-opacity='0.08'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+
+  color: black;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
   text-align: center;
-}
-.wrapper .content{
-  margin: 35px 0;
-}
-.content .quote-area{
   display: flex;
+  align-items: center;
   justify-content: center;
 }
-.quote-area i{
-  font-size: 15px;
+
+.quote-container{
+  width: auto;
+  max-width: 900px;
+  padding: 20px 30px;
+  border-radius: 7px;
+  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
-.quote-area i:first-child{
-  margin: 3px 10px 0 0;
+
+.quote-text{
+  font-size: 3.00rem
 }
-.quote-area i:last-child{
+
+.long-quote{
+  font-size: 2rem;
+}
+
+.fa-quote-left{
+  font-size: 4rem;
+}
+
+.quote-author{
+  margin-top: 15px;
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: italic;   
+}
+
+.button-container{
+  margin-top:  15px;
   display: flex;
-  margin: 0 0 3px 10px;
-  align-items: flex-end;
-}
-.quote-area .quote{
-  font-size: 22px;
-  text-align: center;
-  word-break: break-all;
-}
-.content .author{
-  display: flex;
-  font-size: 18px;
-  margin-top: 20px;
-  font-style: italic;
-  justify-content: flex-end;
-}
-.author span:first-child{
-  margin: -7px 5px 0 0;
-  font-family: monospace;
-}
-.wrapper .buttons{
-  border-top: 1px solid #ccc;
-}
-.buttons .features{
-  display: flex;
-  margin-top: 20px;
-  align-items: center;
   justify-content: space-between;
 }
-.features ul{
-  display: flex;
-}
-.features ul li{
-  margin: 0 5px;
-  height: 47px;
-  width: 47px;
-  display: flex;
+
+button{
   cursor: pointer;
-  color: #5372F0;
-  list-style: none;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #5372F0;
-  transition: all 0.3s ease;
-}
-.features ul li:first-child{
-  margin-left: 0;
-}
-ul li:is(:hover, .active){
-  color: #fff;
-  background: #5372F0;
-}
-ul .speech.active{
-  pointer-events: none;
-}
-.buttons button{
+  font-size: 1.2rem;
+  height: 2.5rem;
   border: none;
-  color: #fff;
+  border-radius: 10px;
+  color: white;
+  background: black;
   outline: none;
-  font-size: 16px;
-  cursor: pointer;
-  padding: 13px 22px;
-  border-radius: 30px;
-  background: #040404;
+  padding: 0.5rem 1.8rem;
+  box-shadow: 0 0.25rem rgba(121,121,121,0.64);
 }
-.buttons button.loading{
-  opacity: 0.7;
-  pointer-events: none;
+
+button:hover{
+  filter: brightness(120%);
+}
+
+button:active{
+  transform: translate(0, 0.3rem);
+  box-shadow: 0 0.1rem rgba(255,255,255,0.64);
+}
+
+.fa-twitter{
+  font-size: 1.5rem;
+}
+
+.twitter-button:hover{
+  color: #38a1f3;
+}
+
+#new-quote:hover{
+  color: #38a1f3;
+}
+
+
+/* Media Query Tablet or Smaller */
+@media screen and (max-width: 1000px) {
+  .quote-container{
+    margin: auto 12px; 
+    padding: 10px;
+    font-size: 2rem;
+  }
+
+  .quote-text{
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .quote-container{
+    margin: auto 17px; 
+    padding: 8px;
+    font-size: 1.5rem;
+  }
+
+  .quote-text{
+    font-size: 1.5rem;
+  }
+}
+
+/* Dark Mode Switch  */
+
+/* Dark Mode Toggle */
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+  z-index: 100;
+  position: fixed;
+  right: 25px;
+  top: 30px;
+}
+
+.theme-switch-wrapper span {
+  margin-right: 10px;
+  font-size: 1rem;
+}
+
+.toggle-text {
+  position: relative;
+  top: -4px;
+  right: 5px;
+  color: var(--on-background);
+}
+
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  background: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 0.4s;
+}
+
+.slider::before {
+  background: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: 0.4s;
+  width: 26px;
+}
+
+input:checked + .slider {
+  background: var(--primary-color);
+}
+
+input:checked + .slider::before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round::before {
+  border-radius: 50%;
+}
+
+.fas {
+  font-size: 30px;
+  margin-right: 5px;
 }
